Thu Jan 15 01:00:48 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_termlist.cc: Use Xapian::doccount instead of
	  unsigned int in set_entries().

Thu Jan 15 00:56:47 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc,backends/quartz/btree.h,
	  testsuite/btreecheck.cc: Made some static functions into static
	  member functions of Btree so we can avoid duplicating code in
	  btreecheck.cc.  Also tweaked compare_keys to use memcmp and
	  special case when the keys are the same length (each of these
	  changes gives a very small speed gain).

Thu Jan 15 00:54:47 GMT 2004  Olly Betts <olly@survex.com>

	* api/maptermlist.h: Removed a FIXME which already had been fixed.
	  Removed a couple of asserts from a function which should never be
	  called (and so had `Assert(false)' anyway).

Mon Jan 12 00:32:37 GMT 2004  Olly Betts <olly@survex.com>

	* bin/quartzdump.cc: Backslash escape space and backslash in output
	  rather than hex encoding them; renamed start-term and end-term to
	  start-key and end-key; removed rather pointless "Calling next"
	  message; if there's an error, write it to stderr not stdout, and
	  exit with return code 1.

Sun Jan 11 03:23:17 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_termlist.cc: When possible, pack the wdf into
	  the same byte as the reuse length - doing so typically makes the
	  termlist 14% smaller!  This change is backward compatible.

Sat Jan 10 03:04:22 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc: Fixed bug in new postlist
	  chunking code.

Sat Jan 10 00:45:04 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_termlist.cc: Removed unused
	  OLD_TERMLIST_FORMAT code.

Fri Jan 09 21:54:34 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc: Fix incorrect code which just
	  happens to build and work with GCC 2.95.

Fri Jan 09 14:40:00 GMT 2004  Olly Betts <olly@survex.com>
